fixed spacings

--- a/css/main.css
+++ b/css/main.css
@@ -17,19 +17,23 @@ nav{
 }
 .navbar-inverse .navbar-nav>li>a {
     color: white;
-}
+  }
 .navbar-inverse .navbar-brand {
-    color: white
+    color: white;
+    position: absolute;
+    left: 10px;
+
 }
 .block{
     padding: 20px 0px;   
 }
 .h1{
-  font-size: 54px;
+  font-size: 54px !important;
+  line-height: 25px;
 
 }
 .h4{
-  font-size: 24px;
+  font-size: 24px !important;
 
 }
 .h2{
@@ -43,7 +47,7 @@ p{
   line-height: 32px;
 }
 .parallax-window {
-    min-height: 600px;
+    min-height: 720px;
     min-width: 100%;
     background: transparent;
     padding-bottom: 40px;
